deploy/manifests/01_rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: opni-system
