deploy/manifests/20_cluster.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opni
