deploy/manifests/10_operator.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: opni-controller-manager-metrics-service
  namespace: opni-system
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  name: opni-webhook-service
  namespace: opni-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: opni-controller-manager
  namespace: opni-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      serviceAccountName: opni-manager
      containers:
        - args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
          command:
            - /manager
          image: rancher/opni-manager
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /host-etc/os-release
              name: host-os-release
        - args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=10
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
          name: kube-rbac-proxy
          ports:
            - containerPort: 8443
              name: https
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
        - hostPath:
            path: /etc/os-release
            type: File
          name: host-os-release
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
  name: opni-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: opni-webhook-service
        namespace: opni-system
        path: /mutate-opni-io-v1beta2-logadapter
    failurePolicy: Fail
    name: mlogadapter.kb.io
    rules:
      - apiGroups:
          - opni.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - logadapters
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
  name: opni-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: opni-webhook-service
        namespace: opni-system
        path: /validate-opni-io-v1beta2-logadapter
    failurePolicy: Fail
    name: vlogadapter.kb.io
    rules:
      - apiGroups:
          - opni.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - logadapters
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: opni-webhook-service
        namespace: opni-system
        path: /highlander-opni-io-v1beta1-opnicluster
    failurePolicy: Fail
    name: highlander.opni.io
    rules:
      - apiGroups:
          - opni.io
        apiVersions:
          - v1beta1
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - opniclusters
    sideEffects: None
